--- a/LabProject/LabProject.csproj
+++ b/LabProject/LabProject.csproj
@@ -35,6 +35,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -136,15 +137,22 @@
     <Compile Include="Controllers\AdministratorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Dal\AdministratorsDB.cs" />
+    <Compile Include="Dal\CoursesScheduleDB.cs" />
+    <Compile Include="Dal\LecturerDB.cs" />
     <Compile Include="Dal\UsersDB.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Administrator.cs" />
+    <Compile Include="Models\CoursesSchedule.cs" />
+    <Compile Include="Models\Lecturer.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\AdministratorHomeStyle.css" />
+    <Content Include="Content\AdministratorManageLecturers.css" />
+    <Content Include="Content\AdministratorStyle.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -182,9 +190,10 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\ShowUserLog.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
+    <Content Include="Views\Administrator\AdministratorLayout.cshtml" />
     <Content Include="Views\Administrator\AdministratorHome.cshtml" />
+    <Content Include="Views\Administrator\manageLecturersView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
