--- a/LabProject/bin/LabProject.dll.config
+++ b/LabProject/bin/LabProject.dll.config
@@ -13,6 +13,9 @@
     <add name="AdministratorsDB" connectionString="Data Source=DESKTOP-F1DSICN\SQLEXPRESS;Initial Catalog=LabProject;Integrated Security=True" providerName="System.Data.SqlClient"/>
     <add name="CoursesScheduleDB" connectionString="Data Source=DESKTOP-F1DSICN\SQLEXPRESS;Initial Catalog=LabProject;Integrated Security=True" providerName="System.Data.SqlClient"/>
     <add name="LecturerDB" connectionString="Data Source=DESKTOP-F1DSICN\SQLEXPRESS;Initial Catalog=LabProject;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="CoursesDB" connectionString="Data Source=DESKTOP-F1DSICN\SQLEXPRESS;Initial Catalog=LabProject;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="StudentsDB" connectionString="Data Source=DESKTOP-F1DSICN\SQLEXPRESS;Initial Catalog=LabProject;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="StudentCoursesDB" connectionString="Data Source=DESKTOP-F1DSICN\SQLEXPRESS;Initial Catalog=LabProject;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
